--- a/brafe2-pure/index.html
+++ b/brafe2-pure/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="header-information">
         <p>Aberto de 08h às 18h - seg à sáb - Rua Bartolomeu Mitre - Botafogo</p>
       </div>
-      <a href="index.html">
+      <a href="index.html" class="header-logo">
         <img src="assets/images/brafe.png" alt="Brafé">
       </a>
-      <nav>
+      <nav class="header-menu">
         <ul>
           <li><a href="#">cafés</a></li>
           <li><a href="#">capuccinos</a></li>
