--- a/brafe2-pure/index.html
+++ b/brafe2-pure/index.html
@@ -44,7 +44,7 @@
           <li>35min +</li>
         </ul>
       </nav>
-      <section>
+      <section class="products">
         <h1>Capuccinos</h1>
         <ul>
           <li>
@@ -80,7 +80,7 @@
         </ul>
       </section>
     </div>
-    <footer>
+    <footer class="footer">
       <p>Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
     </footer>
   </body>
