Class name changed

--- a/brafe2-pure/index.html
+++ b/brafe2-pure/index.html
@@ -32,10 +32,10 @@
           <li>$$$</li>
         </ul>
         <h2>Sabor</h2>
-        <ul class="sabor">
-          <li><span class="sabor-3">Marrom</span></li>
-          <li><span class="sabor-4">Laranja</span></li>
-          <li><span class="sabor-5">Amarelo</span></li>
+        <ul class="flavor">
+          <li><span class="flavor-3">Marrom</span></li>
+          <li><span class="flavor-4">Laranja</span></li>
+          <li><span class="flavor-5">Amarelo</span></li>
         </ul>
         <h2>Tempo</h2>
         <ul>
