--- a/brafe2-grid/index.html
+++ b/brafe2-grid/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brafé 2</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/grid.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
   <body>
@@ -24,7 +25,7 @@
       </nav>
     </header>
     <div class="container">
-      <nav class="filter">
+      <nav class="filter grid-4">
         <h2>Preço</h2>
         <ul>
           <li>$</li>
@@ -44,35 +45,35 @@
           <li>35min +</li>
         </ul>
       </nav>
-      <section class="products">
+      <section class="products grid-8">
         <h1>Capuccinos</h1>
-        <ul>
-          <li>
+        <ul class="row-mobile">
+          <li class="grid-mobile-6">
             <img src="assets/images/coffee-1.jpg" alt="Café 1">
             <span>R$ 3,25</span>
             <h2>Vanilla Diceys</h2>
           </li>
-          <li>
+          <li class="grid-mobile-6">
             <img src="assets/images/coffee-2.jpg" alt="Café 2">
             <span>R$ 4,25</span>
             <h2>Blueberry Latte</h2>
           </li>
-          <li>
+          <li class="grid-mobile-6">
             <img src="assets/images/coffee-3.jpg" alt="Café 3">
             <span>R$ 3,50</span>
             <h2>Ghostbusters Brown</h2>
           </li>
-          <li>
+          <li class="grid-mobile-6">
             <img src="assets/images/coffee-4.jpg" alt="Café 4">
             <span>R$ 5,25</span>
             <h2>Strawberry Fields</h2>
           </li>
-          <li>
+          <li class="grid-mobile-6">
             <img src="assets/images/coffee-5.jpg" alt="Café 5">
             <span>R$ 5,50</span>
             <h2>Scane Comb</h2>
           </li>
-          <li>
+          <li class="grid-mobile-6">
             <img src="assets/images/coffee-6.jpg" alt="Café 6">
             <span>R$ 6,00</span>
             <h2>Wild Bill</h2>
